Fix Downloads link spacing

--- a/website/www/source/stylesheets/_components.less
+++ b/website/www/source/stylesheets/_components.less
@@ -108,6 +108,7 @@
                 color: @docs-blue;
                 text-decoration: none;
                 border-bottom: 1px solid @docs-blue;
+                margin-left: 3px;
 
                 &:hover {
                     color: darken(@blue, 10%);
